--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
     "dev": "npm run dev:server & npm run dev:client",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm install && npm run build"
   }
 }
